--- a/auto.css
+++ b/auto.css
@@ -1,8 +1,79 @@
-.mainDiv___titleBox {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-  grid-gap: 50px;
+.responsive-big-title {
+  margin: 0;
 }
+
+.responsive-big-text {
+  margin-bottom: 5vh;
+}
+
+.purpleBtn {
+  background-color: #8540AF;
+  border: 4px solid #8540AF;
+  border-radius: 50px;
+  margin: 150px auto;
+  padding: 15px 100px;
+  text-decoration: none;
+  color: #000000;
+  font-weight: 700;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.purpleBtn:hover {
+  color: #8540AF;
+  background: none;
+  -webkit-box-shadow: 1px 1px 50px #8540AF;
+          box-shadow: 1px 1px 50px #8540AF;
+}
+
+.f-vw {
+  width: 90%;
+  padding: 5vh 5%;
+}
+
+@media only screen and (min-width: 1000px) {
+  .half-vw {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    grid-gap: 50px;
+  }
+  /* text */
+  .responsive-big-title {
+    font-size: 7vh;
+    font-weight: 900;
+  }
+  .responsive-big-text {
+    font-size: 2.5vh;
+  }
+  .purpleBtn {
+    font-size: 2vh;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .half-vw {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+    grid-gap: 10px;
+  }
+}
+
+@media only screen and (max-width: 1000px) and (min-width: 700px) {
+  .responsive-big-title {
+    font-size: 70px;
+  }
+  .responsive-big-text {
+    font-size: 30px;
+  }
+}
+
+.colorText {
+  color: #8540AF;
+}
+
+/* No CSS # sourceMappingURL=auto.css.map */
 /*# sourceMappingURL=auto.css.map */
