--- a/style.css
+++ b/style.css
@@ -29,16 +29,12 @@ body {
   top: 20vh;
   left: 0;
   color: #ffffff;
+  margin-left: 5%;
 }
 
 .topDiv {
   position: absolute;
   width: 100%;
-}
-
-.f-vw {
-  width: 90%;
-  padding: 5vh 5%;
 }
 
 .blur {
@@ -47,28 +43,5 @@ body {
   -ms-filter: blur(5px);
   -webkit-filter: blur(5px);
           filter: blur(5px);
-}
-
-/* ##################### */
-/* ###### Buttons ###### */
-/* ##################### */
-.purpleBtn {
-  background-color: #8540AF;
-  border: 4px solid #8540AF;
-  border-radius: 50px;
-  margin: 150px auto;
-  padding: 15px 100px;
-  text-decoration: none;
-  color: #000000;
-  font-weight: 700;
-  -webkit-transition: 0.3s ease-in-out;
-  transition: 0.3s ease-in-out;
-}
-
-.purpleBtn:hover {
-  color: #8540AF;
-  color: #000;
-  -webkit-box-shadow: 1px 1px 100px #8540AF;
-          box-shadow: 1px 1px 100px #8540AF;
 }
 /*# sourceMappingURL=style.css.map */
