--- a/style.sass
+++ b/style.sass
@@ -31,14 +31,11 @@ body
     top: 20vh
     left: 0
     color: #ffffff
+    margin-left: 5%
 
 .topDiv
     position: absolute
     width: 100%
-
-.f-vw
-    width: 90%
-    padding: 5vh 5%
 
 .blur
     -moz-filter: blur(5px)
@@ -48,32 +45,3 @@ body
 
   
 
-
-
-/* ##################### */
-/* ###### Buttons ###### */
-/* ##################### */
-
-.purpleBtn
-    background-color: $mainColor
-
-    border: 4px solid $mainColor
-    border-radius: 50px
-
-
-    margin: 150px auto
-    padding: 15px 100px
-
-    text-decoration: none
-    color: #000000
-    font-weight: 700
- 
-
-    transition: 0.3s ease-in-out
-
-
-.purpleBtn:hover
-    color: $mainColor
-
-    color: #000
-    box-shadow: 1px 1px 100px $mainColor
